Fixed spacing on images in the projects page. Added links to project through images if one exists. Cleaned up index.js formatting.

--- a/src/components/ProjectItem/styles.css
+++ b/src/components/ProjectItem/styles.css
@@ -9,10 +9,6 @@
   font-style: italic;
 }
 
-.project__item {
-  margin: 48px 0;
-}
-
 .project__item__title {
   font-size: 1.6em;
   text-decoration: none;
